MID: 655 MSG: Jocs de proves amb Selelium v.3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1292 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -173,7 +173,7 @@ defproc.recurs.processdefinition.hash=000c425d6a58b3103b67bba4d774eae5
 
 # Tramitació
 # --------------------------------------------------------------------
-tramsel.entorn.nom=Entorn tramitación
+tramsel.entorn.nom=Selenium tramitación
 tramsel.entorn.titol=Entorn de proves Selenium - Tramitación
 tramsel.deploy.definicio.proces.nom=expexe
 tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
@@ -200,7 +200,6 @@ tipexp.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\tipexp\\expexe_flux.
 defproc.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\defpro\\expexe_flux.exp
 defproc.tasca_dades.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tasca_dades_exp.exp
 
-defproc.tasca_dades_doc.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tramitacion.exp
 tipexp.tasca_dades_doc.exp.export.arxiu.path={0}\\exports\\tipexp\\expexe_tramitacion.exp
 
 defproc.deploy.definicio.subproces.main.path={0}\\bpm\\expexe_subproces_main.par
