MID: 655 MSG: Jocs de proves amb Selelium v.3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1293 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -1,3 +1,6 @@
+# Usuarios: curso173 (Usuari Dissenyador), curso174 (Usuari Feina), curso175 (Usuari Administrador)
+# Grupo al que pertenecen: pruebas
+
 # Ejecutar test según navegador: chrome, firefox, iexplorer
 test.browser=firefox
 
@@ -186,6 +189,7 @@ tramsel_accio.deploy_flux.arxiu.path={0}\\bpm\\expexe_flux.par
 tramsel_accio.deploy_agafar_alliberar.arxiu.path={0}\\bpm\\expexe_agafar_alliberar.par
 tramsel_accio.deploy.arxiu.path={0}\\bpm\\expexe_accio.par
 tramsel_accio.export.arxiu.path={0}\\exports\\tipexp\\expexe_accio.exp
+tramsel_subproces.export.arxiu.path={0}\\exports\\tipexp\\expexe_subproces.exp
 
 defproc.mod.exp.deploy.arxiu.path={0}\\bpm\\expexe_mod_exp.par
 defproc.mod.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_mod_exp.exp
@@ -197,6 +201,7 @@ defproc.nou_tasca_ini.exp.deploy.arxiu.path={0}\\bpm\\expexe_tasca_ini_exp.par
 defproc.nou_tasca_ini.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tasca_ini_exp.exp
 
 tipexp.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\tipexp\\expexe_flux.exp
+tipexp.tasques_expedient.export.arxiu.path={0}\\exports\\tipexp\\expexe_tasques_expedient.exp
 defproc.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\defpro\\expexe_flux.exp
 defproc.tasca_dades.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tasca_dades_exp.exp
 
@@ -269,3 +274,5 @@ consulta.deploy.entorn.path={0}/exports/entorn/entorn_consulta.exp
 tramas.entorn.nom=Selenium tramas
 tramas.entorn.titol=Entorn de proves Selenium - Tramitació massiva
 tramas.num_expedientes_tram_masiva=1
+tramas_massivo.export.arxiu.path={0}/exports/tipexp/expexe_massiva.exp
+
