MID: 655 MSG: Jocs de proves amb Selelium v.3 MAS.1 Programar hora d'execució MAS.2 Programar enviament de correu MAS.3.1 Comprovar la càrrega de subprocessos MAS.3.2 Canviar la versió del procés i dels subprocessos MAS.4 Executar script MAS.5 Aturar tramitació MAS.6.1 Visualització de les accions MAS.6.2 Execució d'una acció
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1295 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -193,6 +193,7 @@ tramsel_subproces.export.arxiu.path={0}\\exports\\tipexp\\expexe_subproces.exp
 
 defproc.mod.exp.deploy.arxiu.path={0}\\bpm\\expexe_mod_exp.par
 defproc.mod.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_mod_exp.exp
+defproc.mod.exp_documents.export.arxiu.path={0}\\exports\\defpro\\expexe_documents.exp
 
 defproc.nou.exp.deploy.arxiu.path={0}\\bpm\\expexe_nou_exp.par
 defproc.nou.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_nou_exp.exp
@@ -206,6 +207,7 @@ defproc.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\defpro\\expexe_flux
 defproc.tasca_dades.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tasca_dades_exp.exp
 
 tipexp.tasca_dades_doc.exp.export.arxiu.path={0}\\exports\\tipexp\\expexe_tramitacion.exp
+tipexp.exp_termini.export.arxiu.path={0}\\exports\\tipexp\\expexe_termini.exp
 
 defproc.deploy.definicio.subproces.main.path={0}\\bpm\\expexe_subproces_main.par
 defproc.deploy.definicio.subproces.main_direct.path={0}\\bpm\\expexe_subproces_main_direct.par
