--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -37,16 +37,16 @@
 		<dependency>
 			<groupId>es.caib</groupId>
 			<artifactId>valcert-client-axis</artifactId>
-			<version>1.5</version>
+			<version>2.0.9</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/valcert-client-axis-1.5.jar</systemPath>
+			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/valcert-client-rest.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>es.caib</groupId>
 			<artifactId>valcert-sar-axis</artifactId>
-			<version>1.5</version>
+			<version>2.0.9</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/valcert-sar-axis-1.5-HELIUM.jar</systemPath>
+			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/valcert-sar-rest.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.alfresco</groupId>
@@ -120,6 +120,13 @@
 		<dependency>
 			<groupId>jboss</groupId>
 			<artifactId>jbosssx</artifactId>
+			<version>3.2.3</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jboss-system</artifactId>
 			<version>3.2.3</version>
 			<type>jar</type>
 			<scope>provided</scope>
