MID: 655 MSG: Jocs de proves amb Selelium v.3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1306 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -183,6 +183,9 @@ tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 
 tramit.docadjunt.nom1=Nom document adjunt 1
 
+tramsel.firma_nom=ANF Empresa Activo
+tramsel.firma_pass=
+
 tramsel_signature.export.arxiu.path={0}\\exports\\tipexp\\expexe_signature.exp
 tramsel.deploy.arxiu.path={0}\\bpm\\expexe_tramitacion.par
 tramsel_accio.deploy_flux.arxiu.path={0}\\bpm\\expexe_flux.par
@@ -211,6 +214,7 @@ tipexp.exp_termini.export.arxiu.path={0}\\exports\\tipexp\\expexe_termini.exp
 
 defproc.deploy.definicio.subproces.main.path={0}\\bpm\\expexe_subproces_main.par
 defproc.deploy.definicio.subproces.main_direct.path={0}\\bpm\\expexe_subproces_main_direct.par
+tipexp.deploy.expexe_document_massiva.path={0}\\exports\\tipexp\\expexe_document_massiva.exp
 defproc.deploy.expexe_executar_script.path={0}\\bpm\\expexe_executar_script.par
 defproc.subproces.deploy.arxiu.path={0}\\bpm\\expexe_subproces.par
 
