--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -279,7 +279,7 @@
 		<profile>
 			<id>tomcat</id>
 			<activation>
-				<activeByDefault>false</activeByDefault>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
 				<application.context>application-context-tomcat.xml</application.context>
@@ -296,6 +296,11 @@
 						</exclusion>
 					</exclusions>
 				</dependency>
+				<dependency>
+		    		<groupId>cglib</groupId>
+					<artifactId>cglib</artifactId>
+					<version>2.2</version>
+		    	</dependency>
 				<dependency>
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-entitymanager</artifactId>
@@ -334,7 +339,7 @@
 		<profile>
 			<id>jboss</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
 				<application.context>application-context-jboss.xml</application.context>
