MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.10.5 Configuración arranque de servicios integraciones (parte 2) MAS.8.5.3 Adjuntar document nou MAS.8.5.4 Esborrar document
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1327 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -17,6 +17,8 @@ app.organigrama.actiu=true
 app.numexp.expression=${seq}/${any}
 # Optimització de les consultes a domini
 app.optimitzar.consultes.domini=false
+# Activar arranque servicios Selenium
+app.selenium.ws.integracion=false
 
 # Idiomes en que es pot mostrar l'aplicació en codificació ISO i separats per comes
 #app.idiomes.disponibles=ca_ES,es_ES
@@ -168,13 +170,6 @@ app.zonaper.service.password=auto
 app.redose.service.url=http://10.35.3.83:8080/redosews/services/v2/BackofficeFacade
 app.redose.service.username=auto
 app.redose.service.password=auto
-
-# ###
-# Autenticació dels serveis proporcionats per Helium
-# ###
-# Accés al servei d'avisos pel SISTRA
-app.bantel.avisos.username=sistra
-app.bantel.avisos.password=sistra
 # Accés al servei de consulta de dominis per SISTRA
 #app.domini.consulta.username=user
 #app.domini.consulta.password=pass
