--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<module>helium-util</module>
 		<module>helium-webapp</module>
 		<module>helium-ws</module>
+		<module>helium-selenium-integraciones</module>
 		<module>helium-jbpm3</module>
 		<module>helium-core-api</module>
 		<module>helium-hibernate-entitymanager</module>
