--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -20,18 +20,18 @@ test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
 #test.base.url.configuracio=http://oficina.limit.es/helium/index.html
 #test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
-test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
-test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
+test.base.url.disseny=http://curso174:alu52pt@localhost:8080/helium/index.html
+test.base.url.feina=http://curso173:alu52pt@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=curso175
 test.base.usuari.configuracio.pass=alu52pt
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=curso173
+test.base.usuari.disseny=curso174
 test.base.usuari.disseny.pass=alu52pt
 test.base.usuari.disseny.nom=Usuari Dissenyador
 
-test.base.usuari.feina=curso174
+test.base.usuari.feina=curso173
 test.base.usuari.feina.pass=alu52pt
 test.base.usuari.feina.nom=Usuari Feina
 
@@ -205,6 +205,7 @@ defproc.nou_tasca_ini.exp.deploy.arxiu.path={0}/bpm/expexe_tasca_ini_exp.par
 defproc.nou_tasca_ini.exp.export.arxiu.path={0}/exports/defpro/expexe_tasca_ini_exp.exp
 
 tipexp.tasca_dades.exp.export_flux.arxiu.path={0}/exports/tipexp/expexe_flux.exp
+tipexp.tasca_dades_serv_tram.exp.export_flux.arxiu.path={0}/exports/tipexp/expexe_servicio_tramitacion.exp
 tipexp.tasques_expedient.export.arxiu.path={0}/exports/tipexp/expexe_tasques_expedient.exp
 defproc.tasca_dades.exp.export_flux.arxiu.path={0}/exports/defpro/expexe_flux.exp
 defproc.tasca_dades.exp.export.arxiu.path={0}/exports/defpro/expexe_tasca_dades_exp.exp
@@ -235,7 +236,7 @@ deploy.arxiu.pdf.tramitacio_2.hash=a6b659799e66c72da78fd0a426283859
 # --------------------------------------------------------------------
 deploy.arxiu.portasignatures={0}/test/util/blank.pdf
 app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
-app.portasignatures.plugin.url=http://localhost:8080/helium/wsintegraciones/portafirmas
+app.portasignatures.plugin.url=http://localhost:8080/helium/ws/portafirmas
 app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
 app.portasignatures.plugin.usuari=HELIUM
 app.portasignatures.plugin.password=HELIUM
@@ -244,8 +245,7 @@ app.portasignatures.plugin.password=HELIUM
 # --------------------------------------------------------------------
 deploy.arxiu.custodia={0}/test/util/blank.pdf
 app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
-app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
-app.custodia.plugin.caib.url=http://localhost:8080/helium/wsintegraciones/CustodiaDocumentos
+app.custodia.plugin.caib.url=http://localhost:8080/helium/ws/CustodiaDocumentos
 app.custodia.plugin.caib.usuari=HELIUM
 app.custodia.plugin.caib.password=HELIUMABC
 app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
@@ -254,7 +254,8 @@ app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/si
 # --------------------------------------------------------------------
 deploy.arxiu.registre={0}/test/util/blank.pdf
 
-
+# Tramitación
+# --------------------------------------------------------------------
 app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
 
 
