--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -251,6 +251,13 @@
 		</dependency>
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-selenium-integraciones</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-plugin-api</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
