--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -81,11 +81,16 @@
 	<servlet>
 		<servlet-name>CXFServlet</servlet-name>
 		<servlet-class>net.conselldemallorca.helium.ws.HeliumCXFServlet</servlet-class>
-		<load-on-startup>3</load-on-startup>
+		<load-on-startup>2</load-on-startup>
 	</servlet>
 	<servlet>
 		<servlet-name>EndpointPublisherServlet</servlet-name>
 		<servlet-class>net.conselldemallorca.helium.ws.EndpointPublisherServlet</servlet-class>
+		<load-on-startup>3</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>EndpointPublisherServletIntegraciones</servlet-name>
+		<servlet-class>net.conselldemallorca.helium.wsintegraciones.EndpointPublisherServlet</servlet-class>
 		<load-on-startup>4</load-on-startup>
 	</servlet>
 	<servlet>
@@ -157,6 +162,10 @@
 			<url-pattern>/ws/DominiIntern</url-pattern>
 			<url-pattern>/ws/FormulariExtern</url-pattern>
 			<url-pattern>/ws/TramitacioService</url-pattern>
+			<!-- Selenium-integraciones.begin -->
+			<url-pattern>/ws/CustodiaDocumentos</url-pattern>
+			<url-pattern>/ws/portafirmas</url-pattern>
+			<!-- Selenium-integraciones.end -->
 			<url-pattern>/services/*</url-pattern>
 			<url-pattern>/signatura/aFirma/*</url-pattern>
 			<url-pattern>/signatura/caib/*</url-pattern>
