--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -14,13 +14,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>es.caib</groupId> -->
-<!-- 			<artifactId>signaturacaib</artifactId> -->
-<!-- 			<version>4.2.1</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${basedir}/../helium-selenium/lib/signaturacaib.core-4.2.1-api-unsigned.jar</systemPath> -->
-<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -36,20 +29,13 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>net.conselldemallorca</groupId> -->
-<!-- 			<artifactId>helium-core-v26</artifactId> -->
-<!-- 			<version>${helium.version}</version> -->
-<!-- 			<type>jar</type> -->
-<!-- 			<scope>compile</scope> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>net.conselldemallorca</groupId> -->
-<!-- 			<artifactId>helium-selenium-integraciones</artifactId> -->
-<!-- 			<version>${helium.version}</version> -->
-<!-- 			<type>jar</type> -->
-<!-- 			<scope>compile</scope> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-selenium-integraciones</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-ws</artifactId>
@@ -74,14 +60,12 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				 <version>3.1</version>
 				<configuration>
 					<fork>true</fork>
-					<compilerVersion>1.6</compilerVersion>
-					<source>1.6</source>
-					<target>1.6</target>
+					<compilerVersion>${java.version}</compilerVersion>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
