MID: 655 MSG: Jocs de proves amb Selelium v.3 MAS.9 Reindexar expedients
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1333 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -192,6 +192,7 @@ tramsel_accio.deploy_flux.arxiu.path={0}/bpm/expexe_flux.par
 tramsel_accio.deploy_agafar_alliberar.arxiu.path={0}/bpm/expexe_agafar_alliberar.par
 tramsel_accio.deploy.arxiu.path={0}/bpm/expexe_accio.par
 tramsel_accio.export.arxiu.path={0}/exports/tipexp/expexe_accio.exp
+tramsel_massiva.export.arxiu.path={0}/exports/tipexp/expexe_tramsel_massiva.exp
 tramsel_subproces.export.arxiu.path={0}/exports/tipexp/expexe_subproces.exp
 
 defproc.mod.exp.deploy.arxiu.path={0}/bpm/expexe_mod_exp.par
