--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -88,11 +88,11 @@
 		<servlet-class>net.conselldemallorca.helium.ws.EndpointPublisherServlet</servlet-class>
 		<load-on-startup>3</load-on-startup>
 	</servlet>
-	<servlet>
+	<!--servlet>
 		<servlet-name>EndpointPublisherServletIntegraciones</servlet-name>
 		<servlet-class>net.conselldemallorca.helium.wsintegraciones.EndpointPublisherServlet</servlet-class>
 		<load-on-startup>4</load-on-startup>
-	</servlet>
+	</servlet-->
 	<servlet>
 		<servlet-name>AxisServlet</servlet-name>
 		<servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class>
