Creades les classes de test de Selenium per Tipus d´expedient i per informes.
Afegides a la classe Entorn, les proves referents a Dominis, entre d´altres funcions de ajuda.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1355 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -36,6 +36,7 @@ test.base.usuari.feina.pass=alu52pt
 test.base.usuari.feina.nom=Usuari Feina
 
 test.base.rol.configuracio=HEL_USER
+test.base.rol.proves=HEL_PROVES
 test.base.group=pruebas
 test.base.group.tipo=tipo de pruebas
 
@@ -285,6 +286,40 @@ tramas.num_expedientes_tram_masiva=1
 tramas_massivo.export.arxiu.path={0}/exports/tipexp/expexe_massiva.exp
 tramas_massivo.plantilla={0}/test/util/plantilla.odt
 
+# DISENY - TIPUS EXPEDIENT
+######################################################################
+
+# Tipus expedient
+# --------------------------------------------------------------------
+tipexp.entorn.nom=Selenium tipexp
+tipexp.entorn.titol=Entorn de proves Selenium - Tipus Expedient
+tipexp.deploy.definicio.proces.nom=expexe
+tipexp.deploy.definicio.subproces.nom=subprocesInfo
+tipexp.deploy.tipus.expedient.codi=Selenium consulta 1
+tipexp.deploy.tipus.expedient.nom=Expedient Desplegat
+tipexp.deploy.arxiu.path={0}/exports/tipexp/TipExpSel.exp
+tipexp.deploy.tipus.expedient.estat.codi=estat1
+tipexp.deploy.tipus.expedient.estat.nom=Estat 1
+#tipexp.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
+
+#deploy.arxiu.path=src\\test\\resources\\expexe.par
+# Windows
+# deploy.arxiu.path=c:/expexe.par
+# Linux
+#deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
+tipexp.export.entorn.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
+tipexp.deploy.export.path=/home/sion/Escriptori/lot3/TipExpSel.exp
+tipexp.import.dades.path=/home/sion/Escriptori/lot3/expexe_defpro_import.exp
+tipexp.export.dades.hash=3e1448b7deb1e7bb2e5ed8edaa2cc699
+
+#CONSULTES
+tipexp.dominis.tipus.expedient.codi=TipExpCons
+tipexp.dominis.tipus.expedient.nom=Tipus Exp. Proves Consultes
+
+#Informacio Expedient
+tipexp.deploy.info.tipus.expedient.codi=Expedient Importat
+tipexp.deploy.info.tipus.expedient.nom=Expedient Desplegat
+
 # INFORMES
 ######################################################################
 
@@ -292,15 +327,22 @@ tramas_massivo.plantilla={0}/test/util/plantilla.odt
 # --------------------------------------------------------------------
 informe.entorn.nom=Selenium informe
 informe.entorn.titol=Entorn de proves Selenium - Informes
-informe.deploy.definicio.proces.nom=Informe1
-informe.deploy.definicio.proces.path={0}/exports/defpro/inf1.exp
-informe.deploy.tipus.expedient.codi.1=
-informe.deploy.tipus.expedient.nom.1=Selenium informe 1
-informe.deploy.tipus.expedient.path.1={0}/exports/tipexp/Informe1.exp
-informe.deploy.tipus.expedient.codi.2=Selenium informe 2
-informe.deploy.tipus.expedient.nom.2=Selenium informe 2
-informe.deploy.tipus.expedient.path.2={0}/exports/tipexp/informe2.exp
+
+informe.deploy.definicio.proces.nom=Cons1
+informe.deploy.definicio.proces.path={0}/exports/defpro/defpro_informes.exp
+
+informe.deploy.tipus.expedient.codi=Selenium consulta 1
+informe.deploy.tipus.expedient.nom=Selenium consulta 1
+informe.deploy.tipus.expedient.path={0}/exports/tipexp/tipexp_informe.exp
+
+informe.deploy.consulta.nom=Consulta Selenium
+
+#informe.deploy.tipus.expedient.codi.2=Selenium informe 2
+#informe.deploy.tipus.expedient.nom.2=Selenium informe 2
+#informe.deploy.tipus.expedient.path.2={0}/exports/tipexp/informe2.exp
 informe.deploy.entorn.path={0}/exports/entorn/entorn_informe.exp
+informe.consulta.tipus.expedient.path={0}/exports/tipexp/Cons1.exp
 informe.consulta.codi=informe
 informe.consulta.titol=Selenium informe
-informe.consulta.informe.path=
+informe.consulta.informe.path={0}/exports/tipexp/vacia.jrxml
+informe.consulta.informe.multiple.path={0}/exports/tipexp/infMultiple.zip
