Pujades proves Selenium CFG (configuracions).
Revisades la resta de proves: Xpaths Generics, incluits pantallazos.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1363 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -17,21 +17,21 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
-test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
 #test.base.url.configuracio=http://oficina.limit.es/helium/index.html
 #test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
-test.base.url.disseny=http://curso174:alu52pt@localhost:8080/helium/index.html
-test.base.url.feina=http://curso173:alu52pt@localhost:8080/helium/index.html
+test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
+test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
+test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=curso175
 test.base.usuari.configuracio.pass=alu52pt
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=curso174
+test.base.usuari.disseny=curso173
 test.base.usuari.disseny.pass=alu52pt
 test.base.usuari.disseny.nom=Usuari Dissenyador
 
-test.base.usuari.feina=curso173
+test.base.usuari.feina=curso174
 test.base.usuari.feina.pass=alu52pt
 test.base.usuari.feina.nom=Usuari Feina
 
@@ -320,13 +320,43 @@ tipexp.dominis.tipus.expedient.nom=Tipus Exp. Proves Consultes
 tipexp.deploy.info.tipus.expedient.codi=Expedient Importat
 tipexp.deploy.info.tipus.expedient.nom=Expedient Desplegat
 
+#Definicions de proces
+tipexp.definicio.proces.entorn.nom=Selenium tipexp - DefProc
+tipexp.definicio.proces.entorn.titol=Selenium Tipus Expedient - TEX5 - DefProc
+tipexp.definicio.proces.tipus.expedient.nom=TipExp_DefPro
+tipexp.definicio.proces.tipus.expedient.titol=Selenium tipexp proves DefProc
+tipexp.definicio.proces.path.jbpm={0}/bpm/expexe_nou_exp.par
+tipexp.definicio.proces.path.helium={0}/exports/defpro/defpro_informes.exp
+
+#Documents del tipus d´expedient
+tipexp.documents.entorn.nom=Selenium tipexp - Documents
+tipexp.documents.entorn.titol=Selenium Tipus Expedient - TEX8 - Documents
+tipexp.documents.tipus.expedient.nom=TipExp_Docs
+tipexp.documents.tipus.expedient.titol=Selenium tipexp proves docs
+tipexp.documents.definicio.proces.nom=Cons1
+tipexp.documents.definicio.proces.path={0}/exports/defpro/Cons1_Proves_Docs.exp
+tipexp.documents.path.doc.proves={0}/exports/defpro/informe_prova_docs.pdf
+
+#Redireccions
+tipexp.redireccio.entorn.nom=Selenium tipexp - Redireccio
+tipexp.redireccio.entorn.titol=Selenium Tipus Expedient - TEX10 - Redireccio
+tipexp.redireccio.tipus.expedient.nom=Selenium consulta 1
+tipexp.redireccio.tipus.expedient.titol=Expedient Desplegat
+tipexp.redireccio.tipus.expedient.path={0}/exports/tipexp/Cons1.exp
+
+#Modificar i eliminar expedient
+tipexp.mod-del.entorn.nom=Selenium tipexp - Modificar-eliminar
+tipexp.mod-del.entorn.titol=Selenium Tipus Expedient - TEX13 (Mod) i TEX14 (Del)
+tipexp.mod-del.tipus.expedient.codi=Tip_Exp_Mod-Del
+tipexp.mod-del.tipus.expedient.nom=Tip Exp proves Modificacio Eliminacio
+
 # INFORMES
 ######################################################################
 
 # Expedients
 # --------------------------------------------------------------------
 informe.entorn.nom=Selenium informe
-informe.entorn.titol=Entorn de proves Selenium - Informes
+informe.entorn.titol=Entorn de proves Selenium - INF - Informes
 
 informe.deploy.definicio.proces.nom=Cons1
 informe.deploy.definicio.proces.path={0}/exports/defpro/defpro_informes.exp
@@ -346,3 +376,13 @@ informe.consulta.codi=informe
 informe.consulta.titol=Selenium informe
 informe.consulta.informe.path={0}/exports/tipexp/vacia.jrxml
 informe.consulta.informe.multiple.path={0}/exports/tipexp/infMultiple.zip
+
+# CONFIGURACIO APLICACIO
+######################################################################
+config.aplicacio.entorn.nom=Selenium - Configuracio aplicacio
+
+config.persones.entorn.titol=Selenium Configuracio Persones - CFG.1
+config.rols.entorn.titol=Selenium Configuracio Rols - CFG.2
+config.festius.entorn.titol=Selenium Configuracio Festius - CFG.3
+config.reassig.entorn.titol=Selenium Configuracio Reassig - CFG.4
+config.url.festiu.service=http://localhost:8080/helium/dwr/call/plaincall/
