Selenium: 	- Implementadas pruebas para TEX.11 (Tramites) y TEX.12 (Forms). 	- Revisadas pruebas de Entorno y añadida la ENT.6 Reindexar expedientes
[messages.properties] Añadida traduccion que faltaba cuando se borraba un mapeo de sistra.
[ExpedientTipusSistraAdjuntsController.java] Corregido error 404 al que daba al intentar borrar un doc. adjunto.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1364 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -48,6 +48,11 @@ test.base.group.tipo=tipo de pruebas
 #entorn.nom=Selenium entorn
 entorn.nom=proves_selenium
 entorn.titol=Entorn de proves Selenium - Entorn
+#entorn.reindexacio.tipus.expedient.nom=TipExpReindx
+#entorn.reindexacio.tipus.expedient.titol=Tipus Exp. Reindexar
+entorn.reindexacio.tipus.expedient.codi=Expedient Importat
+entorn.reindexacio.tipus.expedient.nom=Expedient Desplegat
+entorn.reindexacio.tipexp.deploy.path={0}/exports/tipexp/TipExpSel.exp
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
 
@@ -227,8 +232,18 @@ deploy.arxiu.pdf.tramitacio_1={0}/test/util/blank.pdf
 deploy.arxiu.pdf.tramitacio_1.hash=a6b659799e66c72da78fd0a426283859
 deploy.arxiu.pdf.tramitacio_2={0}/test/util/blank.pdf
 deploy.arxiu.pdf.tramitacio_2.hash=a6b659799e66c72da78fd0a426283859
-# --------------------------------------------------------------------
 
+tramitacio.expedient.reindexar.entorn.nom=EntReindExp
+tramitacio.expedient.reindexar.entorn.titol=Entorn Reindexar Expedient - Selenium EXP.12
+tramitacio.expedient.reindexar.tipus.expedient.codi=Expedient Importat
+tramitacio.expedient.reindexar.tipus.expedient.nom=Expedient Desplegat
+tramitacio.expedient.reindexar.tipus.expedient.path={0}/exports/tipexp/TipExpSel.exp
+
+# --------------------------------------------------------------------
+#Registre de l´expedient
+
+exptramit.registre.expedient.entorn.nom=EntTramExpRegExp
+exptramit.registre.expedient.entorn.titol=Entorn Selenium EXP.9 - Tramitacio Exp - Registre Exp
 
 
 # INTEGRACIÓ
@@ -336,6 +351,22 @@ tipexp.documents.tipus.expedient.titol=Selenium tipexp proves docs
 tipexp.documents.definicio.proces.nom=Cons1
 tipexp.documents.definicio.proces.path={0}/exports/defpro/Cons1_Proves_Docs.exp
 tipexp.documents.path.doc.proves={0}/exports/defpro/informe_prova_docs.pdf
+
+#Intregracio amb Tramits
+tipexp.tramits.entorn.nom=Selenium tipexp - Tramits
+tipexp.tramits.entorn.titol=Selenium Tipus Expedient - TEX11 - Tramits
+
+tipexp.tramits.tipus.expedient.codi=Expedient Importat
+tipexp.tramits.tipus.expedient.nom=Expedient Desplegat
+tipexp.tramits.arxiu.path={0}/exports/tipexp/TipExpSel.exp
+
+tipexp.tramits.definicio.proces.nom=Cons1
+
+#Intregracio amb Forms
+tipexp.integracio.forms.entorn.nom=Selenium tipexp - Forms
+tipexp.integracio.forms.entorn.titol=Selenium Tipus Expedient - TEX12 - Forms
+tipexp.integracio.forms.tipus.expedient.codi=ExpedientIntegraForms
+tipexp.integracio.forms.tipus.expedient.nom=Expedient Proves Integracions Forms
 
 #Redireccions
 tipexp.redireccio.entorn.nom=Selenium tipexp - Redireccio
