- Afegits suites de proves al pom i TestRunner. - Acabat i provat el test: EXP.10.3.1 - Tramitació expedient Dades 	- Implementat el punt de Carrega de dominis (SQL, WS, intern) 	- Executat el joc de proves complet (TasquesSubprocessExpedient.java) - Afegides algunes funcions utils a BaseTest.java
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1376 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -76,8 +76,16 @@
 				<configuration>
 					<includes>
 						<!-- Suites de proves a executar -->
-						<include>**/ConfiguracioEntornSuite.java</include>
+						<include>**/ConfiguracioAplicacioSuite.java</include>
 						<include>**/ConfiguracioDefinicioProcesSuite.java</include>
+						<include>**/ConfiguracioEntornSuite.java</include>
+						<include>**/ConsultaExpedientSuite.java</include>
+						<include>**/ExecucioMassivaSuite.java</include>
+						<include>**/InformesSuite.java</include>
+						<include>**/IntegracioSuite.java</include>
+						<include>**/TestSuite.java</include>
+						<include>**/TipusExpedientSuite.java</include>
+						<include>**/TramitacioSuite.java</include>
 					</includes>
 					<skipTests>${skipTests}</skipTests>
 				</configuration>
