--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -7,6 +7,14 @@ test.browser=firefox
 # Suits a executar
 test.executar.suite.configuracio.entorn=true
 test.executar.suite.configuracio.defpro=true
+test.executar.suite.configuracio.aplicacio=true
+test.executar.suite.consulta.expedient=true
+test.executar.suite.execucio.massiva=true
+test.executar.suite.informes=true
+test.executar.suite.integracio=true
+test.executar.suite.test=true
+test.executar.suite.tipus.expedient=true
+test.executar.suite.tramitacio=true
 
 # Drivers de los navegadores
 # Windows
@@ -182,8 +190,12 @@ defproc.recurs.processdefinition.hash=000c425d6a58b3103b67bba4d774eae5
 
 # Tramitació
 # --------------------------------------------------------------------
-tramsel.entorn.nom=Selenium tramitación
-tramsel.entorn.titol=Entorn de proves Selenium - Tramitación
+#tramsel.entorn.nom=Selenium tramitación
+#tramsel.entorn.titol=Entorn de proves Selenium - Tramitación
+
+tramsel.entorn.nom=Selenium tramitacio - Dades
+tramsel.entorn.titol=Selenium Tramitacio - EXP.10.3.1 - Dades
+
 tramsel.deploy.definicio.proces.nom=expexe
 tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 
@@ -367,6 +379,12 @@ tipexp.integracio.forms.entorn.nom=Selenium tipexp - Forms
 tipexp.integracio.forms.entorn.titol=Selenium Tipus Expedient - TEX12 - Forms
 tipexp.integracio.forms.tipus.expedient.codi=ExpedientIntegraForms
 tipexp.integracio.forms.tipus.expedient.nom=Expedient Proves Integracions Forms
+
+#Intregracio amb Formularis Externs
+tipexp.integracio.forms.ext.entorn.nom=SelTramExpFormEXT
+tipexp.integracio.forms.ext.entorn.titol=Selenium Tramitacio Expedient - EXP.10.4.1 - Formularis Externs
+tipexp.integracio.forms.ext.tipus.expedient.codi=ExpedientIntegraFormuExt
+tipexp.integracio.forms.ext.tipus.expedient.nom=Expedient Proves Integracions Forms Ext
 
 #Redireccions
 tipexp.redireccio.entorn.nom=Selenium tipexp - Redireccio
