Desplegat nou WS dins selenium-integracions per poder fer les proves de formularis externs.
Preparada la classe de proves de formularis externs y afegida al test suite de integracions.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1380 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium-integraciones/pom.xml
+++ b/helium-selenium-integraciones/pom.xml
@@ -38,6 +38,13 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-ws</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>		
+		<dependency>
 			<groupId>axis</groupId>
 			<artifactId>axis</artifactId>
 			<version>1.4</version>
