--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -318,8 +318,13 @@ tramas_massivo.plantilla={0}/test/util/plantilla.odt
 
 # Tipus expedient
 # --------------------------------------------------------------------
-tipexp.entorn.nom=Selenium tipexp
-tipexp.entorn.titol=Entorn de proves Selenium - Tipus Expedient
+
+#tipexp.entorn.nom=Selenium tipexp
+#tipexp.entorn.titol=Entorn de proves Selenium - Tipus Expedient
+
+tipexp.entorn.nom=ENT_TEX_1
+tipexp.entorn.titol=Entorn Selenium TEX1 - Crear
+
 tipexp.deploy.definicio.proces.nom=expexe
 tipexp.deploy.definicio.subproces.nom=subprocesInfo
 tipexp.deploy.tipus.expedient.codi=Selenium consulta 1
