--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -18,7 +18,7 @@ app.numexp.expression=${seq}/${any}
 # Optimització de les consultes a domini
 app.optimitzar.consultes.domini=false
 # Activar arranque servicios Selenium
-app.selenium.ws.integracion=false
+app.selenium.ws.integracion=true
 
 # Idiomes en que es pot mostrar l'aplicació en codificació ISO i separats per comes
 #app.idiomes.disponibles=ca_ES,es_ES
