EXP.1.2.5 Comprovar integració amb tràmits sistra (part 2)
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1388 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium-integraciones/pom.xml
+++ b/helium-selenium-integraciones/pom.xml
@@ -57,6 +57,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>es.caib</groupId>
+			<artifactId>sistra-wsdl</artifactId>
+			<version>1.1.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/sistra-wsdl-1.1.0.jar</systemPath>
+	  	</dependency>		
 	</dependencies>	
 	
 	<build>
