--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -159,6 +159,7 @@
 			<url-pattern>/ws/</url-pattern>
 			<url-pattern>/ws/NotificacioEntradaV1</url-pattern>
 			<url-pattern>/ws/NotificacioEntradaV2</url-pattern>
+			<url-pattern>/ws/NotificacioEntradaV3</url-pattern>
 			<url-pattern>/ws/DominiIntern</url-pattern>
 			<url-pattern>/ws/FormulariExtern</url-pattern>
 			<url-pattern>/ws/TramitacioService</url-pattern>
