MID: 694. MSG: Millorar el filtre del llistat de tasques MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1413 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -46,7 +46,7 @@ test.base.usuari.feina.nom=Usuari Feina
 
 test.base.rol.configuracio=HEL_USER
 test.base.rol.proves=HEL_PROVES
-test.base.group=pruebas
+test.base.group=HEL_SELENIUM
 test.base.group.tipo=tipo de pruebas
 
 # DISSENY
