--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.40.0</version>
+			<version>2.43.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -87,7 +87,7 @@
 						<include>**/TipusExpedientSuite.java</include>
 						<include>**/TramitacioSuite.java</include>
 					</includes>
-					<skipTests>${skipTests}</skipTests>
+<!-- 					<skipTests>${skipTests}</skipTests> -->
 				</configuration>
 			</plugin>
 		</plugins>
