MID: 655. MSG: Jocs de proves amb Selelium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1430 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -83,11 +83,10 @@
 						<include>**/ExecucioMassivaSuite.java</include>
 						<include>**/InformesSuite.java</include>
 						<include>**/IntegracioSuite.java</include>
-						<include>**/TestSuite.java</include>
 						<include>**/TipusExpedientSuite.java</include>
 						<include>**/TramitacioSuite.java</include>
 					</includes>
-<!-- 					<skipTests>${skipTests}</skipTests> -->
+					<skipTests>${skipTests}</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
