- Añadida la opcion de poder entrar con seycon a las URLs de disseny y proves de selenium.
- Parametrizada en el test.properties la URL del WS de DominiIntern para ejecuciones en otros entornos.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1435 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -25,12 +25,14 @@ test.executar.suite.tramitacio=true
 #webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
 
 # Adreça - usuari del test
-test.base.url.inicio.seycon=false
+test.base.url.inicio.seycon=true
 #test.base.url.configuracio=http://oficina.limit.es/helium/index.html
 #test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
-test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
-test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
-test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
+test.base.url.configuracio=https://proves.caib.es/helium/index.html
+test.base.url.feina=https://proves.caib.es/helium/index.html
+test.base.url.disseny=https://proves.caib.es/helium/index.html
+
+test.url.ws.domini.intern=http://localhost:8080/helium/ws/DominiIntern
 
 test.base.usuari.configuracio=curso175
 test.base.usuari.configuracio.pass=alu52pt
