Revisats URLS de WS perque funcionin a entorn de proves de la caib
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1436 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -32,7 +32,12 @@ test.base.url.configuracio=https://proves.caib.es/helium/index.html
 test.base.url.feina=https://proves.caib.es/helium/index.html
 test.base.url.disseny=https://proves.caib.es/helium/index.html
 
-test.url.ws.domini.intern=http://localhost:8080/helium/ws/DominiIntern
+#test.url.ws.domini.intern=http://localhost:8080/helium/ws/DominiIntern
+test.url.ws.domini.intern=https://proves.caib.es/helium/ws/DominiIntern?wsdl
+#test.url.ws.inici.formulari=http://localhost:8080/helium/ws/IniciFormulari
+test.url.ws.inici.formulari=https://proves.caib.es/helium/ws/IniciFormulari
+#test.url.ws.formulari.extern=http://localhost:8080/helium/ws/FormulariExtern
+test.url.ws.formulari.extern=https://proves.caib.es/helium/ws/FormulariExtern
 
 test.base.usuari.configuracio=curso175
 test.base.usuari.configuracio.pass=alu52pt
@@ -273,8 +278,10 @@ exptramit.registre.expedient.entorn.titol=Entorn Selenium EXP.9 - Tramitacio Exp
 # --------------------------------------------------------------------
 deploy.arxiu.portasignatures={0}/test/util/blank.pdf
 app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
-app.portasignatures.plugin.url=http://localhost:8080/helium/ws/portafirmas
-app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
+#app.portasignatures.plugin.url=http://localhost:8080/helium/ws/portafirmas
+app.portasignatures.plugin.url=https://proves.caib.es/helium/ws/portafirmas
+#app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
+app.portasignatures.plugin.url.callback=https://proves.caib.es/helium/services/MCGDWS
 app.portasignatures.plugin.usuari=HELIUM
 app.portasignatures.plugin.password=HELIUM
 
@@ -282,7 +289,8 @@ app.portasignatures.plugin.password=HELIUM
 # --------------------------------------------------------------------
 deploy.arxiu.custodia={0}/test/util/blank.pdf
 app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
-app.custodia.plugin.caib.url=http://localhost:8080/helium/ws/CustodiaDocumentos
+#app.custodia.plugin.caib.url=http://localhost:8080/helium/ws/CustodiaDocumentos
+app.custodia.plugin.caib.url=https://proves.caib.es/helium/ws/CustodiaDocumentos
 app.custodia.plugin.caib.usuari=HELIUM
 app.custodia.plugin.caib.password=HELIUMABC
 app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
@@ -293,8 +301,8 @@ deploy.arxiu.registre={0}/test/util/blank.pdf
 
 # Tramitación
 # --------------------------------------------------------------------
-app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
-
+#app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
+app.tramitacion.url=https://proves.caib.es/helium/ws/TramitacioService
 
 # CONSULTES
 ######################################################################
@@ -455,4 +463,5 @@ config.persones.entorn.titol=Selenium Configuracio Persones - CFG.1
 config.rols.entorn.titol=Selenium Configuracio Rols - CFG.2
 config.festius.entorn.titol=Selenium Configuracio Festius - CFG.3
 config.reassig.entorn.titol=Selenium Configuracio Reassig - CFG.4
-config.url.festiu.service=http://localhost:8080/helium/dwr/call/plaincall/
+#config.url.festiu.service=http://localhost:8080/helium/dwr/call/plaincall/
+#config.url.festiu.service=https://proves.caib.es/helium/dwr/call/plaincall/
