MID: 655 MSG: Jocs de proves amb Selelium v.3
Les dates a varis tests relacionats amb terminis de tasques no es sumaven/restaven correctament al no tenir en conte els dies no laborables.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1450 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -229,8 +229,8 @@ defproc.recurs.processdefinition.hash=000c425d6a58b3103b67bba4d774eae5
 tramsel.entorn.nom.signatura=Integra_Singatura
 tramsel.entorn.titol.signatura=Selenium Integracions - EXP.10.4.2 - Signatura
 
-tramsel.entorn.nom=SelTram_Dades
-tramsel.entorn.titol=Selenium Tramitacio - EXP.10.3.1 - Dades
+tramsel.entorn.nom=SelTram_Dades2
+tramsel.entorn.titol=Selenium Tramitacio - EXP.10.3.1 - Dades 2
 
 tramsel.deploy.definicio.proces.nom=expexe
 tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
