--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -25,7 +25,7 @@ test.executar.suite.tramitacio=true
 #webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
 
 # Adreça - usuari del test
-test.base.url.inicio.seycon=true
+test.base.url.inicio.seycon=false
 
 #test.base.url.configuracio=http://oficina.limit.es/helium/index.html
 #test.base.url.feina=http://oficina.limit.es/helium/index.html
@@ -33,35 +33,35 @@ test.base.url.inicio.seycon=true
 
 #test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
 
-#test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
-#test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
-#test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
+test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
+test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
+test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
 
-test.base.url.configuracio=https://proves.caib.es/helium/index.html
-test.base.url.feina=https://proves.caib.es/helium/index.html
-test.base.url.disseny=https://proves.caib.es/helium/index.html
+#test.base.url.configuracio=https://proves.caib.es/helium/index.html
+#test.base.url.feina=https://proves.caib.es/helium/index.html
+#test.base.url.disseny=https://proves.caib.es/helium/index.html
 
-#test.url.ws.domini.intern=http://localhost:8080/helium/ws/DominiIntern
-test.url.ws.domini.intern=https://proves.caib.es/helium/ws/DominiIntern?wsdl
-#test.url.ws.inici.formulari=http://localhost:8080/helium/ws/IniciFormulari
-test.url.ws.inici.formulari=https://proves.caib.es/helium/ws/IniciFormulari
-#test.url.ws.formulari.extern=http://localhost:8080/helium/ws/FormulariExtern
-test.url.ws.formulari.extern=https://proves.caib.es/helium/ws/FormulariExtern
+test.url.ws.domini.intern=http://localhost:8080/helium/ws/DominiIntern
+#test.url.ws.domini.intern=https://proves.caib.es/helium/ws/DominiIntern?wsdl
+test.url.ws.inici.formulari=http://localhost:8080/helium/ws/IniciFormulari
+#test.url.ws.inici.formulari=https://proves.caib.es/helium/ws/IniciFormulari
+test.url.ws.formulari.extern=http://localhost:8080/helium/ws/FormulariExtern
+#test.url.ws.formulari.extern=https://proves.caib.es/helium/ws/FormulariExtern
 
 test.base.usuari.configuracio=curso175
 test.base.usuari.configuracio.pass=alu52pt
-#test.base.usuari.configuracio.nom=Usuari Administrador
-test.base.usuari.configuracio.nom=Selenium 03
+test.base.usuari.configuracio.nom=Usuari Administrador
+#test.base.usuari.configuracio.nom=Selenium 03
 
 test.base.usuari.disseny=curso173
 test.base.usuari.disseny.pass=alu52pt
-#test.base.usuari.disseny.nom=Usuari Dissenyador
-test.base.usuari.disseny.nom=Selenium 01
+test.base.usuari.disseny.nom=Usuari Dissenyador
+#test.base.usuari.disseny.nom=Selenium 01
 
 test.base.usuari.feina=curso174
 test.base.usuari.feina.pass=alu52pt
-#test.base.usuari.feina.nom=Usuari Feina
-test.base.usuari.feina.nom=Selenium 02
+test.base.usuari.feina.nom=Usuari Feina
+#test.base.usuari.feina.nom=Selenium 02
 
 test.base.rol.configuracio=HEL_USER
 test.base.rol.proves=HEL_PROVES
@@ -97,8 +97,8 @@ defproc.deploy.definicio.subproces.nom=subprocesInfo
 defproc.deploy.tipus.expedient.codi=TipExpSel
 defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 defproc.deploy.arxiu.path={0}/exports/lot3/expexe.par
-#defproc.deploy.url.ws.domini=http://localhost:8080/helium/ws/DominiIntern
-defproc.deploy.url.ws.domini=https://proves.caib.es/helium/ws/DominiIntern
+defproc.deploy.url.ws.domini=http://localhost:8080/helium/ws/DominiIntern
+#defproc.deploy.url.ws.domini=https://proves.caib.es/helium/ws/DominiIntern
 #deploy.arxiu.path=src/test/resources/expexe.par
 # Windows
 # deploy.arxiu.path=c:/expexe.par
@@ -301,10 +301,10 @@ exptramit.registre.expedient.entorn.titol=Entorn Selenium EXP.9 - Tramitacio Exp
 # --------------------------------------------------------------------
 deploy.arxiu.portasignatures={0}/test/util/blank.pdf
 app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
-#app.portasignatures.plugin.url=http://localhost:8080/helium/ws/portafirmas
-app.portasignatures.plugin.url=https://proves.caib.es/helium/ws/portafirmas
-#app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
-app.portasignatures.plugin.url.callback=https://proves.caib.es/helium/services/MCGDWS
+app.portasignatures.plugin.url=http://localhost:8080/helium/ws/portafirmas
+#app.portasignatures.plugin.url=https://proves.caib.es/helium/ws/portafirmas
+app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
+#app.portasignatures.plugin.url.callback=https://proves.caib.es/helium/services/MCGDWS
 app.portasignatures.plugin.usuari=HELIUM
 app.portasignatures.plugin.password=HELIUM
 
@@ -312,8 +312,8 @@ app.portasignatures.plugin.password=HELIUM
 # --------------------------------------------------------------------
 deploy.arxiu.custodia={0}/test/util/blank.pdf
 app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
-#app.custodia.plugin.caib.url=http://localhost:8080/helium/ws/CustodiaDocumentos
-app.custodia.plugin.caib.url=https://proves.caib.es/helium/ws/CustodiaDocumentos
+app.custodia.plugin.caib.url=http://localhost:8080/helium/ws/CustodiaDocumentos
+#app.custodia.plugin.caib.url=https://proves.caib.es/helium/ws/CustodiaDocumentos
 app.custodia.plugin.caib.usuari=HELIUM
 app.custodia.plugin.caib.password=HELIUMABC
 app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
@@ -324,8 +324,8 @@ deploy.arxiu.registre={0}/test/util/blank.pdf
 
 # Tramitación
 # --------------------------------------------------------------------
-#app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
-app.tramitacion.url=https://proves.caib.es/helium/ws/TramitacioService
+app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
+#app.tramitacion.url=https://proves.caib.es/helium/ws/TramitacioService
 
 # CONSULTES
 ######################################################################
@@ -450,8 +450,8 @@ tipexp.integracio.sistra.tipus.expedient.codi=Expedient_Integra_Sistra
 tipexp.integracio.sistra.tipus.expedient.nom=Expedient Integra Sistra
 tipexp.integracio.sistra.deploy.arxiu.path={0}/exports/tipexp/TipExpIntegraSistra.exp
 tipexp.integracio.sistra.deploy.defpro.path={0}/exports/defpro/DefProIntegraSistra.exp
-#tipexp.integracio.sistra.url.bantel=http://localhost:8080/helium/ws/NotificacioEntradaV3
-tipexp.integracio.sistra.url.bantel=https://proves.caib.es/helium/ws/NotificacioEntradaV3
+tipexp.integracio.sistra.url.bantel=http://localhost:8080/helium/ws/NotificacioEntradaV3
+#tipexp.integracio.sistra.url.bantel=https://proves.caib.es/helium/ws/NotificacioEntradaV3
 
 # INFORMES
 ######################################################################
@@ -488,5 +488,5 @@ config.persones.entorn.titol=Selenium Configuracio Persones - CFG.1
 config.rols.entorn.titol=Selenium Configuracio Rols - CFG.2
 config.festius.entorn.titol=Selenium Configuracio Festius - CFG.3
 config.reassig.entorn.titol=Selenium Configuracio Reassig - CFG.4
-#config.url.festiu.service=http://localhost:8080/helium/dwr/call/plaincall/
+config.url.festiu.service=http://localhost:8080/helium/dwr/call/plaincall/
 #config.url.festiu.service=https://proves.caib.es/helium/dwr/call/plaincall/
